WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301100
Crash in Style::Scope::createOrFindSharedShadowTreeResolver with content extensions
https://bugs.webkit.org/show_bug.cgi?id=301100
Summary
Crash in Style::Scope::createOrFindSharedShadowTreeResolver with content exte...
Antti Koivisto
Reported
2025-10-20 09:25:07 PDT
We may wipe cached style resolvers map while adding to it.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2025-10-20 09:25:22 PDT
rdar://83302107
Antti Koivisto
Comment 2
2025-10-20 09:54:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52663
EWS
Comment 3
2025-10-21 07:28:09 PDT
Committed
301878@main
(68e23c662f54): <
https://commits.webkit.org/301878@main
> Reviewed commits have been landed. Closing PR #52663 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug