Source/WebCore/style/StyleScope.cpp
@@ -148,6 +148,8 @@ void Scope::createOrFindSharedShadowTreeResolver()
     ASSERT(!m_resolver);
     ASSERT(m_shadowRoot);
 
+    RELEASE_ASSERT(!m_isUpdatingStyleResolver);
+
     auto key = makeResolverSharingKey();
 
     auto result = documentScope().m_sharedShadowTreeResolvers.ensure(WTFMove(key), [&] {
@@ -191,6 +193,9 @@ auto Scope::makeResolverSharingKey() -> ResolverSharingKey
 
 void Scope::clearResolver()
 {
+    RELEASE_ASSERT(!m_isUpdatingStyleResolver);
+    RELEASE_ASSERT(!m_document->isResolvingTreeStyle());
+
     m_resolver = nullptr;
     customPropertyRegistry().clearRegisteredFromStylesheets();
     counterStyleRegistry().clearAuthorCounterStyles();
@@ -738,11 +743,8 @@ void Scope::scheduleUpdate(UpdateType update)
             Invalidator::invalidateHostAndSlottedStyleIfNeeded(*m_shadowRoot);
             unshareShadowTreeResolverBeforeMutation();
         }
-        // FIXME: Animation code may trigger resource load in middle of style recalc and that can add a rule to a content extension stylesheet.
-        //        Fix and remove isResolvingTreeStyle() test below, see https://bugs.webkit.org/show_bug.cgi?id=194335
-        // FIXME: The m_isUpdatingStyleResolver test is here because extension stylesheets can get us here from Resolver::appendAuthorStyleSheets.
-        if (!m_isUpdatingStyleResolver && !m_document->isResolvingTreeStyle())
-            clearResolver();
+
+        clearResolver();
 
         m_matchResultCache = { };
     }
@@ -852,6 +854,9 @@ void Scope::didChangeStyleSheetContents()
 
 void Scope::didChangeStyleSheetEnvironment()
 {
+    RELEASE_ASSERT(!m_isUpdatingStyleResolver);
+    RELEASE_ASSERT(!m_document->isResolvingTreeStyle());
+
     if (!m_shadowRoot) {
         m_sharedShadowTreeResolvers.clear();
 
@@ -862,6 +867,19 @@ void Scope::didChangeStyleSheetEnvironment()
     }
 
     scheduleUpdate(UpdateType::ContentsOrInterpretation);
+}
+
+void Scope::didChangeExtensionStyleSheets()
+{
+    ASSERT(!m_shadowRoot);
+
+    // Extension stylesheets may mutate in the middle of a style update when resource loading triggers
+    // content extension processing. In this case we schedule an asyncronous full stylesheet update.
+    // FIXME: We should defer all resource loading after style resolution completes.
+    for (auto& descendantShadowRoot : m_document->inDocumentShadowRoots())
+        const_cast<ShadowRoot&>(descendantShadowRoot).styleScope().scheduleUpdate(UpdateType::FullForExtensionStyleSheets);
+
+    scheduleUpdate(UpdateType::FullForExtensionStyleSheets);
 }
 
 void Scope::didChangeViewportSize()
